add basic formatting

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ellan Joululahja</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Berkshire+Swash&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
     <main>
@@ -13,19 +17,20 @@
                 Muut vaihtoehdot voivat tuoda inspiraatiota tuleviin selfcare-päiviin!</p>
         </header>
         <div class="luukku-container">
-            <div class="backdoor one">
-                <div class="door one"></div>
+            <div class="backDoor bdOne">
+                <div class="door doorOne"><h2></h2></div>
             </div>
-            <div class="backdoor two">
-                <div class="door two"></div>
+            <div class="backDoor bdTwo">
+                <div class="door doorTwo"><h2></h2></div>
             </div>
-            <div class="backdoor three">
-                <div class="door three"></div>
+            <div class="backDoor bdThree">
+                <div class="door doorThree"><h2></h2></div>
             </div>
-            <div class="backdoor four">
-                <div class="door four"></div>
+            <div class="backDoor bdFour">
+                <div class="door doorFour"><h2></h2></div>
             </div>
         </div>
     </main>
+    <script src="script.js"></script>
 </body>
 </html>
