further work on boxes

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         </header>
         <div class="luukku-container">
             <div class="backDoor bdOne">
+                <p>Löylyt kahdelle löylyssä: </p><a href="https://www.loylyhelsinki.fi/yleinensauna" target="_blank">https://www.loylyhelsinki.fi/yleinensauna</a>
                 <div class="door doorOne"><h2></h2></div>
             </div>
             <div class="backDoor bdTwo">
