complete all windows

--- a/index.html
+++ b/index.html
@@ -13,21 +13,30 @@
     <main>
         <header>
             <h1>Ellan Joululahja</h1>
-            <p>Hyvää joulua ja hyvää syntymäpäivää Ella! Voit valita lahjasi neljästä vaihtoehdosta, jotka odottavat näiden luukkujen takana. 
-                Muut vaihtoehdot voivat tuoda inspiraatiota tuleviin selfcare-päiviin!</p>
+            <p>Hyvää joulua ja hyvää syntymäpäivää Ella!</p></br>
+            <p>Näiden luukkujen takana odottavat neljä eri lahjavaihtoehtoa. Voit valita mieluisen - tai antaa sattuman valita!</p>
         </header>
         <div class="luukku-container">
             <div class="backDoor bdOne">
-                <p>Löylyt kahdelle löylyssä: </p><a href="https://www.loylyhelsinki.fi/yleinensauna" target="_blank">https://www.loylyhelsinki.fi/yleinensauna</a>
+                <a class="luukku-header" href="https://www.loylyhelsinki.fi/yleinensauna" target="_blank"><h2>Löylyt kahdelle Löylyssä</h2></a>
+                <a class="luukku-img" href="https://www.loylyhelsinki.fi/yleinensauna" target="_blank"><img src="./images/20241220-Löylysauna-VisitFinlandHarriTarvainen-1200x800.jpg" alt=""></a>
                 <div class="door doorOne"><h2></h2></div>
             </div>
             <div class="backDoor bdTwo">
+                <a class="luukku-header" href="https://paintsandfriends.fi/collections/akryylikaato-workshopit" target="_blank"><h2>Akryylikaato-maalaus workshop</h2></a>
+                <a class="luukku-img" href="https://paintsandfriends.fi/collections/akryylikaato-workshopit" target="_blank"> <img src="./images/20241220-scott-webb-7wywKxNs4pE-unsplash.jpg" alt=""></a>
                 <div class="door doorTwo"><h2></h2></div>
             </div>
             <div class="backDoor bdThree">
+                <a class="luukku-header" href="https://www.ateneumbistro.fi/" target="_blank"><h2>Iltapäivätee kahdelle Ateneum Bistrossa</h2></a>
+                <a class="luukku-img" href="https://www.ateneumbistro.fi/"> <img src="./images/20241220-23-10-18ATENEUN_DOWNSTAIRS 6 (2).jpg" alt=""></a>
+
                 <div class="door doorThree"><h2></h2></div>
             </div>
             <div class="backDoor bdFour">
+                <a class="luukku-header" href="https://hierojakaisa.fi/" target="_blank"><h2>Hieronta Hieroja Kaisalla (tai omalla suosikilla)</h2></a>
+                <a class="luukku-img" href="https://hierojakaisa.fi/"> <img src="./images/20241220-toa-heftiba-a9pFSC8dTlo-unsplash.jpg" alt=""></a>
+
                 <div class="door doorFour"><h2></h2></div>
             </div>
         </div>
