--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <header>
             <h1>Ellan Joululahja</h1>
             <p>Hyvää joulua ja hyvää syntymäpäivää Ella!</p></br>
-            <p>Näiden luukkujen takana odottavat neljä eri lahjavaihtoehtoa. Voit valita mieluisen - tai antaa sattuman valita!</p>
+            <p>Näiden luukkujen takana odottavat neljä eri lahjavaihtoehtoa. Voit valita mieluisen - tai antaa sattuman valita! Lähetä valintasi viestillä ja pistän rahat tilille.</p>
         </header>
         <div class="luukku-container">
             <div class="backDoor bdOne">
@@ -23,7 +23,7 @@
                 <div class="door doorOne"><h2></h2></div>
             </div>
             <div class="backDoor bdTwo">
-                <a class="luukku-header" href="https://paintsandfriends.fi/collections/akryylikaato-workshopit" target="_blank"><h2>Akryylikaato-maalaus workshop</h2></a>
+                <a class="luukku-header" href="https://paintsandfriends.fi/collections/akryylikaato-workshopit" target="_blank"><h2>Akryylikaato-workshop</h2></a>
                 <a class="luukku-img" href="https://paintsandfriends.fi/collections/akryylikaato-workshopit" target="_blank"> <img src="./images/20241220-scott-webb-7wywKxNs4pE-unsplash.jpg" alt=""></a>
                 <div class="door doorTwo"><h2></h2></div>
             </div>
