--- a/index.html
+++ b/index.html
@@ -3,16 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ellan Joululahja</title>
+    <title>Ellan Lahja</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="icon" type="image/x-icon" href="./images/hat-santa.png">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Berkshire+Swash&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
     <main>
         <header>
-            <h1>Ellan Joululahja</h1>
+            <h1>Ellan Lahja</h1>
             <p>Hyvää joulua ja hyvää syntymäpäivää Ella!</p></br>
             <p>Näiden luukkujen takana odottavat neljä eri lahjavaihtoehtoa. Voit valita mieluisen - tai antaa sattuman valita! Lähetä valintasi viestillä ja pistän rahat tilille.</p>
         </header>
