--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
         </header>
         <div class="luukku-container">
             <div class="backDoor bdOne">
-                <a class="luukku-header" href="https://www.loylyhelsinki.fi/yleinensauna" target="_blank"><h2>Löylyt kahdelle Löylyssä</h2></a>
+                <a class="luukku-header" href="https://www.loylyhelsinki.fi/yleinensauna" target="_blank"><h2>Löylyt kahdelle Löylyssä yleisessä saunavuorossa</h2></a>
                 <a class="luukku-img" href="https://www.loylyhelsinki.fi/yleinensauna" target="_blank"><img src="./images/20241220-Löylysauna-VisitFinlandHarriTarvainen-1200x800.jpg" alt=""></a>
                 <div class="door doorOne"><h2></h2></div>
             </div>
             <div class="backDoor bdTwo">
-                <a class="luukku-header" href="https://paintsandfriends.fi/collections/akryylikaato-workshopit" target="_blank"><h2>Akryylikaato-workshop</h2></a>
+                <a class="luukku-header" href="https://paintsandfriends.fi/collections/akryylikaato-workshopit" target="_blank"><h2>Akryylikaato-workshop yhdelle</h2></a>
                 <a class="luukku-img" href="https://paintsandfriends.fi/collections/akryylikaato-workshopit" target="_blank"> <img src="./images/20241220-scott-webb-7wywKxNs4pE-unsplash.jpg" alt=""></a>
                 <div class="door doorTwo"><h2></h2></div>
             </div>
@@ -35,7 +35,7 @@
                 <div class="door doorThree"><h2></h2></div>
             </div>
             <div class="backDoor bdFour">
-                <a class="luukku-header" href="https://hierojakaisa.fi/" target="_blank"><h2>Hieronta Hieroja Kaisalla (tai omalla suosikilla)</h2></a>
+                <a class="luukku-header" href="https://hierojakaisa.fi/" target="_blank"><h2>45min hieronta Hieroja Kaisalla (tai omalla suosikilla)</h2></a>
                 <a class="luukku-img" href="https://hierojakaisa.fi/"> <img src="./images/20241220-toa-heftiba-a9pFSC8dTlo-unsplash.jpg" alt=""></a>
 
                 <div class="door doorFour"><h2></h2></div>
